--- a/index.html
+++ b/index.html
@@ -11,6 +11,123 @@
 </head>
 
 <body>
+    <header>
+        <section>
+            <div>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <a class="navbar-brand" href="#">TS Convention Center</a>
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                                    aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                </button>
+                            </div>
+                            <div>
+                                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                        <li class="nav-item">
+                                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">About Us</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Contact</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">Subsribe</a>
+                                        </li>
+                                </div>
+                            </div>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </section>
+        <!-- Image Slider -->
+        <section>
+            <div>
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/banner.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <div>
+                                    <h1>The Perfect Venue for your <br> next event</h1>
+                                    <p>Convention Hall means any enclosed area where public or private groups assemble
+                                        to
+                                        engage in business or social functions.</p>
+                                    <button onclick="window.location.href='https://www.rosenshinglecreek.com/';"
+                                        class="btn btn-light text-primary px-4 mb-4">Book
+                                        Now</button>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/banner.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h1>The Perfect Venue for your <br> next event</h1>
+                                <p>Convention Hall means any enclosed area where public or private groups assemble to
+                                    engage in business or social functions.</p>
+                                <button onclick="window.location.href='https://www.rosenshinglecreek.com/';"
+                                    class="btn btn-light text-primary px-4 mb-4">Book
+                                    Now</button>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/banner.png" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h1>The Perfect Venue for your <br> next event</h1>
+                                <p>Convention Hall means any enclosed area where public or private groups assemble to
+                                    engage in business or social functions.</p>
+                                <button onclick="window.location.href='https://www.rosenshinglecreek.com/';"
+                                    class="btn btn-light text-primary px-4 mb-4">Book
+                                    Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- FAQ Section -->
+        <section>
+            <div>
+                <div class="row">
+                    <div class="col">
+
+                    </div>
+                    <div class="col">
+                        <img src="images/people.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
