--- a/index.html
+++ b/index.html
@@ -116,13 +116,95 @@
     <main>
         <!-- FAQ Section -->
         <section>
-            <div>
+            <div class="container py-5">
+                <h1 class="text-center py-5">Frequently Asked Question</h1>
                 <div class="row">
                     <div class="col">
+                        <div class="accordion" id="accordionPanelsStayOpenExample">
+                            <!-- FAQ-1 -->
+                            <div class="accordion-item shadow-sm mt-3">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseOne">
+                                        What is the difference between an event planner and a wedding planner?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        Event planners come in a wide range of types, from wedding planners to corporate
+                                        event planners. While wedding planners do fall under the category of event
+                                        planners, they are different from the rest in that they typically only
+                                        coordinate weddings. Other event planners might oversee a variety of other
+                                        events.
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- FAQ-2 -->
+                            <div class="accordion-item shadow-sm mt-3">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseTwo">
+                                        How early do we need to start planning an event?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingTwo">
+                                    <div class="accordion-body">
 
+                                        The time to plan events varies from a few weeks to years. If your event is
+                                        small, you can probably put it together in a month or two. A good rule of thumb
+                                        for any major event, from weddings to a company holiday party, is six months.
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- FAQ-3 -->
+                            <div class="accordion-item shadow-sm mt-3">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseThree">
+                                        What is your refund and cancellation policy?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingThree">
+                                    <div class="accordion-body">
+                                        Refund/cancellation policies applicable in the following conditions: a) In case,
+                                        the buyer cancels the order online before the product has been shipped, the
+                                        entire order amount will be refunded. ... Total order amount after deduction of
+                                        shipment and handling charges will be refunded.
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- FAQ-4 -->
+                            <div class="accordion-item shadow-sm mt-3">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseFour">
+                                        How do you keep budgets on track?
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingFour">
+                                    <div class="accordion-body">
+                                        5 Steps for Tracking Your Monthly Expenses
+                                        1.Check your account statements.
+                                        2.Categorize your expenses.
+                                        3.Use a budgeting or expense-tracking app.
+                                        4.Explore other expense trackers.
+                                        5.Identify room for change.
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <img src="images/people.png" alt="">
+                    <div class="col d-flex align-items-center">
+                        <img src="images/people.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
