--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@
         </section>
     </main>
 
+    <footer>
+        <div class="d-flex justify-content-around align-items-center bg-dark">
+            <div>
+                <p class="text-white">© 2020 bike. All rights reserved</p>
+            </div>
+            <div class="py-4">
+                <h3 class="text-white">Get the App</h3>
+                <div class="py-3"><a href="https://apps.apple.com/us/app/apple-store/id375380948"><img
+                            src="images/apple2.png" class="img-fluid" width="200" height="50" alt=""></a></div>
+                <div><a href="https://play.google.com/store/apps/details?id=com.learnprogramming.codecamp"><img
+                            src="images/android2.png" width="200" class="img-fluid" height="50" alt=""></a></div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
