--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TS Convention Center</title>
+    <script src="https://kit.fontawesome.com/1a2a0ad4f2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -206,6 +208,123 @@
                     <div class="col d-flex align-items-center">
                         <img src="images/people.png" alt="" class="img-fluid">
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- Review Section  -->
+        <section>
+            <div class="container py-5">
+                <h1 class="text-center py-4">Customer Review</h1>
+                <div class="row">
+                    <div class="col-4 d-flex justify-content-end">
+                        <div>
+                            <h1 class="fs-1">4.8</h1>
+                            <div class="icon-color">
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p><i class="fas fa-user pe-2"></i>36,899 total</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="progress">
+
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 3%"
+                                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            </div>
+                        </div>
+                        <div class="py-2">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped bg-success" role="progressbar"
+                                    style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="progress ">
+                            <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 10%"
+                                aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <div class="py-2">
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped bg-warning" role="progressbar"
+                                    style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar"
+                                style="width: 90%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Customer Review -->
+        <section>
+            <div class="container">
+                <div class="card-group">
+                    <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
+                        <div class="d-flex justify-content-center">
+                            <img src="images/player-5.png" class="card-img-top img-fluid client-img" height="30"
+                                width="50" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Tanver</h5>
+                            <p class="card-text">"It's a very interesting app .. If someone is new in the programming
+                                line , wants & dreaming his life in this path and needs proper guidance, your dreams are
+                                save here.. just you have to try your 100% with your full concentration."</p>
+                            <div class="icon-color">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
+                        <div class="d-flex justify-content-center">
+                            <img src="images/player-6.png" class="card-img-top img-fluid client-img" height="30"
+                                width="50" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Rana</h5>
+                            <p class="card-text">"An amazing app for programming. It has many programming methods like
+                                data entry,algorithm etc. But if you want to learn the main methods like web
+                                development,hacking etc. It will have to give money which is not good..that's why I give
+                                this 4 stars.
+                                "</p>
+                            <div class="icon-color">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card text-center shadow p-3 mb-5 bg-body rounded">
+                        <div class="d-flex justify-content-center">
+                            <img src="images/player-3.png" class="card-img-top img-fluid client-img d-flex" height="50"
+                                width="50" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Sobur</h5>
+                            <p class="card-text">"Its so interesting and easy that anyone can try this and it seems to
+                                be like learning programming with fun. Please add Bkash, Nogod or Rocket as a payment
+                                method for the Bangladeshi user. As you know most of the student dont carry credit or
+                                debit card."</p>
+                            <div class="icon-color">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
