our package section

--- a/index.html
+++ b/index.html
@@ -116,10 +116,90 @@
         </section>
     </header>
     <main>
+        <!-- Our Package -->
+        <section>
+            <div class="container">
+                <div>
+                    <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="d-flex">
+                            <div class="toast-body">
+                                Hello, world! This is a toast message.loremldfkj
+                            </div>
+                            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
+                                aria-label="Close"></button>
+                        </div>
+                    </div>
+                </div>
+                <h1 class="py-5 my-5 text-center">Our Package</h1>
+                <div class="row text-center pt-5">
+                    <div class="col-3">
+                        <h1>$300</h1>
+                        <h1>Business Fair</h1>
+                        <p>For most businesses event
+                            like book fair, craft fair.</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> limited space access</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Food arrangement</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> mangement support</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Decoration design</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Decoration design</p>
+                        <div class="d-grid pb-5  mx-auto">
+                            <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <h1>$500</h1>
+                        <h1>wedding basic</h1>
+                        <p>For weddings with basic plan
+                            and limited itemp>
+                        <p><i class="fas fa-check-circle tick-color"></i> Full space access</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Food arrangement</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> mangement support</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Decoration design</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Decoration design</p>
+                        <div class="d-grid pb-5  mx-auto">
+                            <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
+                        </div>
+                    </div>
+                    <!-- Marking Price -->
+                    <div class="col-3 bg-primary text-white" id="marking-package">
+                        <div class="">
+                            <div class="" id="hot-button">
+                                <h4 class="text-white">Hot</h4>
+                            </div>
+                            <h1>$800</h1>
+                            <h1>Wedding plus</h1>
+                            <p>For most weddings with premium plans</p>
+                            <p><i class="fas fa-check-circle "></i> Full space access</p>
+                            <p><i class="fas fa-check-circle "></i> Dedicated team</p>
+                            <p><i class="fas fa-check-circle "></i> Buffet food</p>
+                            <p><i class="fas fa-check-circle "></i> premium Decoration</p>
+                            <p><i class="fas fa-check-circle"></i> pay as plan</p>
+                            <div class="d-grid pb-5  mx-auto">
+                                <button class="btn btn-light rounded-pill text-primary">Chose Plan</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <h1>$1200</h1>
+                        <h1>Corporate event</h1>
+                        <p>For most corporate business
+                            events</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Full space access</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Dedicated team</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> Buffet food</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> premium Decoration</p>
+                        <p><i class="fas fa-check-circle tick-color"></i> pay as plan</p>
+                        <div class="d-grid pb-5  mx-auto">
+                            <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- FAQ Section -->
         <section>
             <div class="container py-5">
-                <h1 class="text-center py-5">Frequently Asked Question</h1>
+                <h1 class="text-center pb-5">Frequently Asked Question</h1>
                 <div class="row">
                     <div class="col">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
