--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                                         <li class="nav-item">
                                             <a class="nav-link" href="#">Subsribe</a>
                                         </li>
+                                    </ul>
                                 </div>
                             </div>
-                            </ul>
+
                         </div>
                     </div>
                 </nav>
@@ -119,20 +120,9 @@
         <!-- Our Package -->
         <section>
             <div class="container">
-                <div>
-                    <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-                        <div class="d-flex">
-                            <div class="toast-body">
-                                Hello, world! This is a toast message.loremldfkj
-                            </div>
-                            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
-                                aria-label="Close"></button>
-                        </div>
-                    </div>
-                </div>
                 <h1 class="py-5 my-5 text-center">Our Package</h1>
                 <div class="row text-center pt-5">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6">
                         <h1>$300</h1>
                         <h1>Business Fair</h1>
                         <p>For most businesses event
@@ -146,7 +136,7 @@
                             <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6">
                         <h1>$500</h1>
                         <h1>wedding basic</h1>
                         <p>For weddings with basic plan
@@ -161,7 +151,7 @@
                         </div>
                     </div>
                     <!-- Marking Price -->
-                    <div class="col-3 bg-primary text-white" id="marking-package">
+                    <div class="col-lg-3 col-md-6 bg-primary text-white" id="marking-package">
                         <div class="">
                             <div class="" id="hot-button">
                                 <h4 class="text-white">Hot</h4>
@@ -179,7 +169,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6">
                         <h1>$1200</h1>
                         <h1>Corporate event</h1>
                         <p>For most corporate business
@@ -196,12 +186,26 @@
                 </div>
             </div>
         </section>
+        <!-- Tost -->
+        <section>
+            <div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-bs-autohide="false">
+                <div class="toast-header">
+                    <img src="..." class="rounded me-2" alt="...">
+                    <strong class="me-auto">Bootstrap</strong>
+                    <small>11 mins ago</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+        </section>
         <!-- FAQ Section -->
         <section>
             <div class="container py-5">
                 <h1 class="text-center pb-5">Frequently Asked Question</h1>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-lg-6 col-md-12">
                         <div class="accordion" id="accordionPanelsStayOpenExample">
                             <!-- FAQ-1 -->
                             <div class="accordion-item shadow-sm mt-3">
@@ -285,10 +289,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-center">
+                    <div class="col-lg-6 col-md-12 d-flex align-items-center">
                         <img src="images/people.png" alt="" class="img-fluid">
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="toast">
+                <div class="tost-header">
+                    <strong class="mr-auto text-primary">Tost Header</strong>
+                    <small class="text-muted">5 mins ago</small>
+                </div>
+                <div class="toast-body">This is the test body</div>
             </div>
         </section>
         <!-- Review Section  -->
@@ -343,64 +356,77 @@
         <!-- Customer Review -->
         <section>
             <div class="container">
-                <div class="card-group">
-                    <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/player-5.png" class="card-img-top img-fluid client-img" height="30"
-                                width="50" alt="...">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Tanver</h5>
-                            <p class="card-text">"It's a very interesting app .. If someone is new in the programming
-                                line , wants & dreaming his life in this path and needs proper guidance, your dreams are
-                                save here.. just you have to try your 100% with your full concentration."</p>
-                            <div class="icon-color">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                <div class="card-group row row-cols-1 row-cols-md-2 row-cols-lg-3">
+                    <div class="col">
+                        <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/player-5.png" class="card-img-top img-fluid client-img" height="30"
+                                    width="50" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Tanver</h5>
+                                <p class="card-text">"It's a very interesting app .. If someone is new in the
+                                    programming
+                                    line , wants & dreaming his life in this path and needs proper guidance, your dreams
+                                    are
+                                    save here.. just you have to try your 100% with your full concentration."</p>
+                                <div class="icon-color">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/player-6.png" class="card-img-top img-fluid client-img" height="30"
-                                width="50" alt="...">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Rana</h5>
-                            <p class="card-text">"An amazing app for programming. It has many programming methods like
-                                data entry,algorithm etc. But if you want to learn the main methods like web
-                                development,hacking etc. It will have to give money which is not good..that's why I give
-                                this 4 stars.
-                                "</p>
-                            <div class="icon-color">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                    <div class="col">
+                        <div class="card text-center shadow p-3 mb-5 bg-body rounded me-4">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/player-6.png" class="card-img-top img-fluid client-img" height="30"
+                                    width="50" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Rana</h5>
+                                <p class="card-text">"An amazing app for programming. It has many programming methods
+                                    like
+                                    data entry,algorithm etc. But if you want to learn the main methods like web
+                                    development,hacking etc. It will have to give money which is not good..that's why I
+                                    give
+                                    this 4 stars.
+                                    "</p>
+                                <div class="icon-color">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card text-center shadow p-3 mb-5 bg-body rounded">
-                        <div class="d-flex justify-content-center">
-                            <img src="images/player-3.png" class="card-img-top img-fluid client-img d-flex" height="50"
-                                width="50" alt="...">
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Sobur</h5>
-                            <p class="card-text">"Its so interesting and easy that anyone can try this and it seems to
-                                be like learning programming with fun. Please add Bkash, Nogod or Rocket as a payment
-                                method for the Bangladeshi user. As you know most of the student dont carry credit or
-                                debit card."</p>
-                            <div class="icon-color">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                    <div class="col">
+                        <div class="card text-center shadow p-3 mb-5 bg-body rounded">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/player-3.png" class="card-img-top img-fluid client-img d-flex"
+                                    height="50" width="50" alt="...">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Sobur</h5>
+                                <p class="card-text">"Its so interesting and easy that anyone can try this and it seems
+                                    to
+                                    be like learning programming with fun. Please add Bkash, Nogod or Rocket as a
+                                    payment
+                                    method for the Bangladeshi user. As you know most of the student dont carry credit
+                                    or
+                                    debit card."</p>
+                                <div class="icon-color">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -426,7 +452,13 @@
     </footer>
 
 
-
+    <script>
+        window.onload = (event) => {
+            let myAlert = document.QuerySelector('.toast');
+            let bsAlert = new bootstrap.Toast(myAlert);
+            bsAlert.show();
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
