--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="images/banner.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <div class="carousel-caption">
                                 <div>
                                     <h1>The Perfect Venue for your <br> next event</h1>
                                     <p>Convention Hall means any enclosed area where public or private groups assemble
                                         to
-                                        engage in business or social functions.</p>
+                                        engage in business.</p>
                                     <button onclick="window.location.href='https://www.rosenshinglecreek.com/';"
                                         class="btn btn-light text-primary px-4 mb-4">Book
                                         Now</button>
@@ -80,8 +80,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/banner.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <img src="images/banner-2.jpg" class="d-block w-100 bg-dark opacity-100" alt="...">
+                            <div class="carousel-caption">
                                 <h1>The Perfect Venue for your <br> next event</h1>
                                 <p>Convention Hall means any enclosed area where public or private groups assemble to
                                     engage in business or social functions.</p>
@@ -91,8 +91,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/banner.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
+                            <img src="images/banner.png" class="d-block w-100 object-fit-img" alt="...">
+                            <div class="carousel-caption ">
                                 <h1>The Perfect Venue for your <br> next event</h1>
                                 <p>Convention Hall means any enclosed area where public or private groups assemble to
                                     engage in business or social functions.</p>
@@ -120,7 +120,7 @@
         <!-- Our Package -->
         <section>
             <div class="container">
-                <h1 class="py-5 my-5 text-center">Our Package</h1>
+                <h1 class="py-5 mt-5 text-center">Our Package</h1>
                 <div class="row text-center pt-5">
                     <div class="col-lg-3 col-md-6">
                         <h1>$300</h1>
@@ -191,12 +191,12 @@
             <div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-bs-autohide="false">
                 <div class="toast-header">
                     <img src="..." class="rounded me-2" alt="...">
-                    <strong class="me-auto">Bootstrap</strong>
-                    <small>11 mins ago</small>
+                    <strong class="me-auto">TS Convention Hall</strong>
+
                     <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                 </div>
                 <div class="toast-body">
-                    Hello, world! This is a toast message.
+                    Please Enter "TS" And get 20% off
                 </div>
             </div>
         </section>
@@ -294,8 +294,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section>
             <div class="toast">
                 <div class="tost-header">
                     <strong class="mr-auto text-primary">Tost Header</strong>
