--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="container">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <a class="navbar-brand" href="#">TS Convention Center</a>
+                                <a class="navbar-brand" href="#">TS Convention Hall</a>
                                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                     aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="images/banner.png" class="d-block w-100 object-fit-img" alt="...">
+                            <img src="images/banner.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption ">
                                 <h1>The Perfect Venue for your <br> next event</h1>
                                 <p>Convention Hall means any enclosed area where public or private groups assemble to
@@ -117,12 +117,27 @@
         </section>
     </header>
     <main>
+
+        <!-- Tost -->
+        <div class="d-flex justify-content-end">
+            <div class="m-3">
+                <div class="toast fade show" id="myToast">
+                    <div class="toast-header">
+                        <strong class="me-auto"><i class="bi-gift-fill"></i> TS Convention Hall!</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                    <div class="toast-body">
+                        20% off On Next Booking <a href="#">Book Now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Our Package -->
         <section>
             <div class="container">
-                <h1 class="py-5 mt-5 text-center">Our Package</h1>
+                <h1 class="py-5 mt-2 text-center">Our Package</h1>
                 <div class="row text-center pt-5">
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 shadow-sm rounded">
                         <h1>$300</h1>
                         <h1>Business Fair</h1>
                         <p>For most businesses event
@@ -136,7 +151,7 @@
                             <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 shadow-sm rounded">
                         <h1>$500</h1>
                         <h1>wedding basic</h1>
                         <p>For weddings with basic plan
@@ -152,7 +167,7 @@
                     </div>
                     <!-- Marking Price -->
                     <div class="col-lg-3 col-md-6 bg-primary text-white" id="marking-package">
-                        <div class="">
+                        <div class="shadow-sm rounded">
                             <div class="" id="hot-button">
                                 <h4 class="text-white">Hot</h4>
                             </div>
@@ -169,7 +184,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6 shadow-sm rounded">
                         <h1>$1200</h1>
                         <h1>Corporate event</h1>
                         <p>For most corporate business
@@ -183,20 +198,6 @@
                             <button class="btn rounded-pill text-primary chose-plan-btn">Chose Plan</button>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-        <!-- Tost -->
-        <section>
-            <div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-bs-autohide="false">
-                <div class="toast-header">
-                    <img src="..." class="rounded me-2" alt="...">
-                    <strong class="me-auto">TS Convention Hall</strong>
-
-                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                </div>
-                <div class="toast-body">
-                    Please Enter "TS" And get 20% off
                 </div>
             </div>
         </section>
@@ -324,28 +325,28 @@
                         <div class="progress">
 
                             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 3%"
-                                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">1
                             </div>
                         </div>
                         <div class="py-2">
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar"
-                                    style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100"></div>
+                                    style="width: 5%" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">2</div>
                             </div>
                         </div>
                         <div class="progress ">
                             <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 10%"
-                                aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                                aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">3</div>
                         </div>
                         <div class="py-2">
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped bg-warning" role="progressbar"
-                                    style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                                    style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">4</div>
                             </div>
                         </div>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped bg-danger" role="progressbar"
-                                style="width: 90%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                style="width: 90%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">5</div>
                         </div>
                     </div>
                 </div>
