--- a/index.html
+++ b/index.html
@@ -364,11 +364,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Tanver</h5>
-                                <p class="card-text">"It's a very interesting app .. If someone is new in the
-                                    programming
-                                    line , wants & dreaming his life in this path and needs proper guidance, your dreams
-                                    are
-                                    save here.. just you have to try your 100% with your full concentration."</p>
+                                <p class="card-text">“For us, The Convention Centre TS is the perfect venue. The
+                                    staff are designed and trained for this type of business. It’s streets ahead of most
+                                    of our international competition as well as our other national venues.”</p>
                                 <div class="icon-color">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -387,12 +385,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Rana</h5>
-                                <p class="card-text">"An amazing app for programming. It has many programming methods
-                                    like
-                                    data entry,algorithm etc. But if you want to learn the main methods like web
-                                    development,hacking etc. It will have to give money which is not good..that's why I
-                                    give
-                                    this 4 stars.
+                                <p class="card-text">"The team at The Convention Centre TS were fantastic in helping
+                                    us to understand and meet the criteria needed to run a digital event. We know now
+                                    what is possible.
                                     "</p>
                                 <div class="icon-color">
                                     <i class="fas fa-star"></i>
@@ -412,13 +407,9 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Sobur</h5>
-                                <p class="card-text">"Its so interesting and easy that anyone can try this and it seems
-                                    to
-                                    be like learning programming with fun. Please add Bkash, Nogod or Rocket as a
-                                    payment
-                                    method for the Bangladeshi user. As you know most of the student dont carry credit
-                                    or
-                                    debit card."</p>
+                                <p class="card-text">"One of the key requirements of this meeting is a networking
+                                    environment. In our initial review of the facilities in the city, we really liked
+                                    the light filled foyers in The CCD and the general orientation of the building."</p>
                                 <div class="icon-color">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -438,7 +429,7 @@
     <footer>
         <div class="d-flex justify-content-around align-items-center bg-dark">
             <div>
-                <p class="text-white">© 2020 bike. All rights reserved</p>
+                <p class="text-white">© 2022 TS. All rights reserved</p>
             </div>
             <div class="py-4">
                 <h3 class="text-white">Get the App</h3>
